Bug 1349658 - Add support for IEEE Float encoded wav files. r=jya

Differential Revision: https://phabricator.services.mozilla.com/D59520