dom/media/test/can_play_type_wave.js
@@ -11,6 +11,7 @@ function check_wave(v, enabled) {
 
   // Supported Wave codecs
   check("audio/wave; codecs=1", "probably");
+  check("audio/wave; codecs=3", "probably");
   check("audio/wave; codecs=6", "probably");
   check("audio/wave; codecs=7", "probably");
   // "no codecs" should be supported, I guess
